Criação das urls de diff na API
