# thf-conference-api/api/swagger.yaml
@@ -33,11 +33,11 @@ paths:
           examples:
             application/json: "{\n\t\"hasNext\": false,\n\t\"items\": [{\n\t\t\"id\"\
               : 1,\n\t\t\"title\": \"THF conference 2017\",\n\t\t\"date\": \"2017-07-11T00:00:00Z\"\
-              ,\n\t\t\"location\": \"Av. Santos Dumont, 831 - Santo Antônio, Joinville\
+              ,\n\t\t\"location\": \"Av. Santos Dumont, 831 - Santo AntÃ´nio, Joinville\
               \ - SC\",\n\t\t\"description\": \"Conference organized by THF\"\n\t\
               }, {\n\t\t\"id\": 2,\n\t\t\"title\": \"THF conference 2018\",\n\t\t\"\
               date\": \"2018-08-11T00:00:00Z\",\n\t\t\"location\": \"Av. Santos Dumont,\
-              \ 831 - Santo Antônio, Joinville - SC\",\n\t\t\"description\": \"Conference\
+              \ 831 - Santo AntÃ´nio, Joinville - SC\",\n\t\t\"description\": \"Conference\
               \ organized by THF\"\n\t}]\n}"
         500:
           description: "Status 500 - Internal Server Error"
@@ -48,8 +48,6 @@ paths:
               \ Server Error\",\n\t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Conferences"
-    x-restlet:
-      section: "Conference"
   /conferences/{id}:
     get:
       tags:
@@ -73,7 +71,7 @@ paths:
           examples:
             application/json: "{\n\t\"id\": 2,\n\t\"title\": \"THF conference 2018\"\
               ,\n\t\"date\": \"2018-08-11T00:00:00Z\",\n\t\"location\": \"Av. Santos\
-              \ Dumont, 831 - Santo Antônio, Joinville - SC\",\n\t\"description\"\
+              \ Dumont, 831 - Santo AntÃ´nio, Joinville - SC\",\n\t\"description\"\
               : \"Conference organized by THF\"\n}"
         404:
           description: "Status 404 - Not Found"
@@ -120,7 +118,7 @@ paths:
           examples:
             application/json: "{\n\t\"id\": 2,\n\t\"title\": \"THF conference 2018\"\
               ,\n\t\"date\": \"2018-08-11T00:00:00Z\",\n\t\"location\": \"Av. Santos\
-              \ Dumont, 831 - Santo Antônio, Joinville - SC\",\n\t\"description\"\
+              \ Dumont, 831 - Santo AntÃ´nio, Joinville - SC\",\n\t\"description\"\
               : \"Conference organized by THF\"\n}"
         404:
           description: "Status 404 - Not Found"
@@ -135,8 +133,28 @@ paths:
               \ Server Error\",\n\t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Conferences"
-    x-restlet:
-      section: "Conference"
+  /conferences/diff/{date}:
+    get:
+      tags:
+      - "Conferences"
+      summary: "Load"
+      operationId: "conferencesDiffDateGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "date"
+        in: "path"
+        description: "Date."
+        required: true
+        type: "string"
+        format: "date-time"
+        x-example: "2018-06-14T13:15:35.605Z"
+      responses:
+        200:
+          description: "Status 200 - OK"
+          schema:
+            $ref: "#/definitions/conferencesResponse"
+      x-swagger-router-controller: "Conferences"
   /lectures/:
     get:
       tags:
@@ -199,8 +217,6 @@ paths:
               \ Server Error\",\n\t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Lectures"
-    x-restlet:
-      section: "Lectures"
   /lectures/{id}:
     get:
       tags:
@@ -315,8 +331,28 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Lectures"
-    x-restlet:
-      section: "Lectures"
+  /lectures/diff/{date}:
+    get:
+      tags:
+      - "Lectures"
+      summary: "Load"
+      operationId: "lecturesDiffDateGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "date"
+        in: "path"
+        description: "Date."
+        required: true
+        type: "string"
+        format: "date-time"
+        x-example: "2018-06-14T13:15:35.605Z"
+      responses:
+        200:
+          description: "Status 200 - OK"
+          schema:
+            $ref: "#/definitions/lecturesResponse"
+      x-swagger-router-controller: "Lectures"
   /notes/:
     get:
       tags:
@@ -376,8 +412,6 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Notes"
-    x-restlet:
-      section: "Notes"
   /notes/{id}:
     get:
       tags:
@@ -487,8 +521,28 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Notes"
-    x-restlet:
-      section: "Notes"
+  /notes/diff/{date}:
+    get:
+      tags:
+      - "Notes"
+      summary: "Load"
+      operationId: "notesDiffDateGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "date"
+        in: "path"
+        description: "Date."
+        required: true
+        type: "string"
+        format: "date-time"
+        x-example: "2018-06-14T13:15:35.605Z"
+      responses:
+        200:
+          description: "Status 200 - OK"
+          schema:
+            $ref: "#/definitions/notesResponse"
+      x-swagger-router-controller: "Notes"
   /speakers/:
     get:
       tags:
@@ -565,8 +619,6 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Speakers"
-    x-restlet:
-      section: "Speakers"
   /speakers/{id}:
     get:
       tags:
@@ -676,8 +728,6 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Speakers"
-    x-restlet:
-      section: "Speakers"
   /speakers/{id}/lectures/:
     get:
       tags:
@@ -717,8 +767,6 @@ paths:
           schema:
             $ref: "#/definitions/errorResponse"
       x-swagger-router-controller: "Speakers"
-    x-restlet:
-      section: "Speakers"
   /speakers/diff/{date}:
     get:
       tags:
@@ -741,8 +789,6 @@ paths:
           schema:
             $ref: "#/definitions/speakersResponse"
       x-swagger-router-controller: "Speakers"
-    x-restlet:
-      section: "Speakers"
   /tracks/:
     get:
       tags:
@@ -787,8 +833,6 @@ paths:
           schema:
             $ref: "#/definitions/errorResponse"
       x-swagger-router-controller: "Tracks"
-    x-restlet:
-      section: "Track"
   /tracks/{id}:
     get:
       tags:
@@ -882,8 +926,28 @@ paths:
           schema:
             $ref: "#/definitions/errorResponse"
       x-swagger-router-controller: "Tracks"
-    x-restlet:
-      section: "Track"
+  /tracks/diff/{date}:
+    get:
+      tags:
+      - "Tracks"
+      summary: "Load"
+      operationId: "tracksDiffDateGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "date"
+        in: "path"
+        description: "Date."
+        required: true
+        type: "string"
+        format: "date-time"
+        x-example: "2018-06-14T13:15:35.605Z"
+      responses:
+        200:
+          description: "Status 200 - OK"
+          schema:
+            $ref: "#/definitions/tracksResponse"
+      x-swagger-router-controller: "Tracks"
   /users/:
     get:
       tags:
@@ -936,8 +1000,6 @@ paths:
               \ Server Error\",\n  \t\"detailedMessage\": \"High system resource usage\"\
               \n}"
       x-swagger-router-controller: "Users"
-    x-restlet:
-      section: "Users"
   /users/{id}:
     get:
       tags:
@@ -1035,8 +1097,6 @@ paths:
           schema:
             $ref: "#/definitions/errorResponse"
       x-swagger-router-controller: "Users"
-    x-restlet:
-      section: "Users"
   /users/{id}/notes/:
     get:
       tags:
@@ -1064,8 +1124,28 @@ paths:
         500:
           description: "Status 500 - Internal Server Error"
       x-swagger-router-controller: "Users"
-    x-restlet:
-      section: "Users"
+  /users/diff/{date}:
+    get:
+      tags:
+      - "Users"
+      summary: "Load"
+      operationId: "usersDiffDateGET"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "date"
+        in: "path"
+        description: "Date."
+        required: true
+        type: "string"
+        format: "date-time"
+        x-example: "2018-06-14T13:15:35.605Z"
+      responses:
+        200:
+          description: "Status 200 - OK"
+          schema:
+            $ref: "#/definitions/usersResponse"
+      x-swagger-router-controller: "Users"
 definitions:
   errorResponse:
     type: "object"
@@ -1090,8 +1170,6 @@ definitions:
         type: "string"
         description: "Details."
     description: "This general error structure is used throughout this API."
-    x-restlet:
-      section: "General"
   conference:
     type: "object"
     required:
@@ -1116,8 +1194,12 @@ definitions:
       description:
         type: "string"
         description: "Conference description."
-    x-restlet:
-      section: "Conference"
+    example:
+      date: "2000-01-23T04:56:07.000+00:00"
+      description: "description"
+      location: "location"
+      id: "id"
+      title: "title"
   conferencesResponse:
     type: "object"
     required:
@@ -1132,8 +1214,19 @@ definitions:
         description: "Conference list."
         items:
           $ref: "#/definitions/conference"
-    x-restlet:
-      section: "Conference"
+    example:
+      hasNext: true
+      items:
+      - date: "2000-01-23T04:56:07.000+00:00"
+        description: "description"
+        location: "location"
+        id: "id"
+        title: "title"
+      - date: "2000-01-23T04:56:07.000+00:00"
+        description: "description"
+        location: "location"
+        id: "id"
+        title: "title"
   lecture:
     type: "object"
     required:
@@ -1178,8 +1271,6 @@ definitions:
       endTime: "endTime"
       title: "title"
       room: "room"
-    x-restlet:
-      section: "Lectures"
   lectureSummary:
     type: "object"
     required:
@@ -1195,8 +1286,6 @@ definitions:
     example:
       id: "id"
       title: "title"
-    x-restlet:
-      section: "Lectures"
   lecturesResponse:
     type: "object"
     required:
@@ -1211,8 +1300,25 @@ definitions:
         description: "Lecture list."
         items:
           $ref: "#/definitions/lecture"
-    x-restlet:
-      section: "Lectures"
+    example:
+      hasNext: true
+      items:
+      - trackId: "trackId"
+        description: "description"
+        startTime: "startTime"
+        speakerId: "speakerId"
+        id: "id"
+        endTime: "endTime"
+        title: "title"
+        room: "room"
+      - trackId: "trackId"
+        description: "description"
+        startTime: "startTime"
+        speakerId: "speakerId"
+        id: "id"
+        endTime: "endTime"
+        title: "title"
+        room: "room"
   note:
     type: "object"
     required:
@@ -1242,8 +1348,6 @@ definitions:
       title: "title"
       userId: "userId"
       lectureId: "lectureId"
-    x-restlet:
-      section: "Notes"
   noteSummary:
     type: "object"
     required:
@@ -1258,8 +1362,6 @@ definitions:
     example:
       id: "id"
       title: "title"
-    x-restlet:
-      section: "Notes"
   notesResponse:
     type: "object"
     required:
@@ -1274,8 +1376,19 @@ definitions:
         description: "Note list."
         items:
           $ref: "#/definitions/note"
-    x-restlet:
-      section: "Notes"
+    example:
+      hasNext: true
+      items:
+      - id: "id"
+        text: "text"
+        title: "title"
+        userId: "userId"
+        lectureId: "lectureId"
+      - id: "id"
+        text: "text"
+        title: "title"
+        userId: "userId"
+        lectureId: "lectureId"
   speaker:
     type: "object"
     required:
@@ -1334,8 +1447,6 @@ definitions:
       id: "id"
       updatedDate: "2000-01-23T04:56:07.000+00:00"
       email: "email"
-    x-restlet:
-      section: "Speakers"
   speakersResponse:
     type: "object"
     required:
@@ -1382,8 +1493,6 @@ definitions:
         id: "id"
         updatedDate: "2000-01-23T04:56:07.000+00:00"
         email: "email"
-    x-restlet:
-      section: "Speakers"
   track:
     type: "object"
     required:
@@ -1403,8 +1512,6 @@ definitions:
       color: "color"
       name: "name"
       id: "id"
-    x-restlet:
-      section: "Track"
   tracksResponse:
     type: "object"
     required:
@@ -1428,8 +1535,6 @@ definitions:
       - color: "color"
         name: "name"
         id: "id"
-    x-restlet:
-      section: "Track"
   user:
     type: "object"
     required:
@@ -1464,8 +1569,6 @@ definitions:
       isSuperUser: true
       id: "id"
       username: "username"
-    x-restlet:
-      section: "Users"
   usersResponse:
     type: "object"
     required:
@@ -1501,57 +1604,3 @@ definitions:
         isSuperUser: true
         id: "id"
         username: "username"
-    x-restlet:
-      section: "Users"
-x-restlet:
-  sections:
-    General: {}
-    Conference: {}
-    Lectures: {}
-    Notes: {}
-    Speakers:
-      description: ""
-    Track: {}
-    Users: {}
-  texts:
-    hm8ia4i:
-      title: "Docs designed and hosted with Restlet Studio"
-      content: "This API was designed and documented using [Restlet Studio](https://studio.restlet.com/).\
-        \ \n\nHead over to Restlet Studio now to design your API documentation for\
-        \ free.\n\n![](https://thecontactsapi.apispark.net/v1/img/studio_right_dark_64.png)"
-    poav2t9:
-      title: "API built with Restlet Cloud"
-      content: "The Contacts API implementation was built and deployed in less that\
-        \ 10 minutes using [Restlet Cloud](https://cloud.restlet.com). Feel free to\
-        \ check out the API's [public overview](https://cloud.restlet.com/apis/23363/versions/1/overview)\
-        \ on Restlet Cloud. \n\n\n\n![](https://thecontactsapi.apispark.net/v1/img/cloud_right_dark_64.png)"
-    dpfogvi:
-      title: "Authentication"
-      content: "This API is secured using Basic Authentication.\n\nAll **read operations\
-        \ are open** and don't require authentication. However, all **write operations\
-        \ require authentication**. "
-      section: "General"
-    wb9ms4i:
-      title: "Error handling"
-      content: "This API uses standard HTTP status codes to indicate the status of\
-        \ a response.\n\nThere are two main categories of error responses. Each have\
-        \ a different response payload structure.\n\n* Simple errors\n* Detailed errors\n\
-        \n\n# Simple errors\n\n| Name | Code | Description |\n| -------- | --------\
-        \ | -------- |\n| Bad request     | 400     | The request was unacceptable\
-        \     |\n| Unauthorized     | 401     | The request has not been applied because\
-        \ it lacks valid authentication credentials for the target resource.     |\n\
-        | Forbidden     | 403     | The server understood the request, but is refusing\
-        \ to fulfill it     |\n| Not Found     | 404     | The server has not found\
-        \ anything matching the request URI     |\n| Not acceptable     | 406    \
-        \ | The server is unable to return a response in the format that was requested\
-        \ by the client     |\n| Unsupported Media Type     | 415     | The server\
-        \ is refusing to service the request because the entity of the request is\
-        \ in a format not supported by the requested resource for the requested method\
-        \     |\n| Too many requests     | 429     | Too many requests hit the API\
-        \ too quickly     |\n| Server error     | 500     | A technical error occured\
-        \ in Restlet Cloud     |\n\n\n\n\n\n\n# Detailed errors\n| Name | Code | Description\
-        \ |\n| -------- | -------- | -------- |\n| Unprocessable entity     | 422\
-        \     | The server understands the content type of the request entity, and\
-        \ the syntax of the request entity is correct, but was unable to process the\
-        \ contained instructions.     |\n\n\n\n\n"
-      section: "General"
